--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,6 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    env:
-      CONAN_USER_HOME: "~"
-      CONAN_USER_HOME_SHORT: "~/.conan_short"
-      CONAN_USE_ALWAYS_SHORT_PATHS: True
-
     steps:
     - uses: actions/checkout@v3
       with:
@@ -47,6 +42,10 @@ jobs:
         key: host-${{ runner.os }}-target-${{ runner.os }}-${{ hashFiles('conanfile.txt') }}
         restore-keys: |
           host-${{ runner.os }}-target-${{ runner.os }}-
+
+    - name: Conan enable Windows short path
+      if: ${{ matrix.os == 'windows-latest' }}
+      run: $Env:CONAN_USE_ALWAYS_SHORT_PATHS = 'True'
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
