--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,11 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    env:
+      CONAN_USER_HOME: "${{ github.workspace }}/release/"
+      CONAN_USER_HOME_SHORT: "${{ github.workspace }}/release/short"
+      CONAN_USE_ALWAYS_SHORT_PATHS: True
+
     steps:
     - uses: actions/checkout@v3
       with:
@@ -36,16 +41,10 @@ jobs:
       env:
         cache-name: cache-conan-packages
       with:
-        path: |
-          ~/.conan
-          ~/.conan_short
+        path: ${{ env.CONAN_USER_HOME }}
         key: host-${{ runner.os }}-target-${{ runner.os }}-${{ hashFiles('conanfile.txt') }}
         restore-keys: |
           host-${{ runner.os }}-target-${{ runner.os }}-
-
-    - name: Conan enable Windows short path
-      if: ${{ matrix.os == 'windows-latest' }}
-      run: $Env:CONAN_USE_ALWAYS_SHORT_PATHS = 'True'
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -64,11 +63,11 @@ jobs:
 
     - name: Print cache directory
       if: ${{ matrix.os == 'windows-latest' }}
-      run: tree C:/Users/runneradmin/.conan /a /f
+      run: tree "${{ github.workspace }}/release/" /a /f
 
-    - name: Print cache directory 2
+    - name: Print cache directory size
       if: ${{ matrix.os == 'windows-latest' }}
-      run: tree C:/Users/runneradmin/.conan_short /a /f
+      run: Get-ChildItem "${{ github.workspace }}/release/" | Measure-Object -Property Length -sum
 
     - name: Setup tmate session
       if: ${{ failure() || matrix.os == 'windows-latest' }}
