--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.16)
 project (gobot)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(3rdparty)
@@ -93,11 +93,13 @@ file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "include/*hpp")
 
 # https://github.com/bincrafters/community/issues/466#issuecomment-426265654
 add_library(gobot SHARED ${SOURCE_CORE} ${SOURCE_SCENE} ${SOURCE_EDITOR} ${HEADER_FILES})
+
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    target_compile_options(gobot PUBLIC "/Zc:preprocessor,__cplusplus")
+    set(GOBOT_COMPILE_OPTIONS "/Zc:preprocessor,__cplusplus")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    target_compile_options(gobot PUBLIC "-fno-gnu-unique")
+    set(GOBOT_COMPILE_OPTIONS "-fno-gnu-unique")
 endif ()
+target_compile_options(gobot PUBLIC "${GOBOT_COMPILE_OPTIONS}")
 
 # https://forum.qt.io/topic/97296/export-qobject-based-class-from-dll/2
 GENERATE_EXPORT_HEADER(gobot)
