--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/rttr"]
 	path = 3rdparty/rttr
 	url = https://github.com/RobSimulatorGroup/rttr.git
+[submodule "3rdparty/imgui"]
+	path = 3rdparty/imgui
+	url = https://github.com/RobSimulatorGroup/imgui.git
