--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
       with:
         version: '5.15.2'
         dir: ${{ github.workspace }}/Qt
+        cache: 'true'
+        cache-key-prefix: 'qt5.15.2-cache-${{ matrix.os }}'
 
     - name: Get Conan
       uses: turtlebrowser/get-conan@v1.1
