--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,7 +20,7 @@ macro(package_add_test TESTNAME FILES)
     target_compile_options(${TESTNAME} PUBLIC "${GOBOT_COMPILE_OPTIONS}")
     target_link_libraries(${TESTNAME} gtest gmock gtest_main)
     if (MSVC)
-        target_link_libraries(${TESTNAME} gobot)
+        target_link_libraries(${TESTNAME} -Wl,--whole-archive gobot)
     else ()
         target_link_libraries(${TESTNAME} -Wl,--no-as-needed gobot)
     endif ()
