--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -39,6 +39,7 @@ package_add_test(test_registration core/test_registration.cpp )
 package_add_test(test_project_setting core/test_project_setting.cpp )
 package_add_test(test_resource core/io/test_resource.cpp)
 package_add_test(test_matrix core/math/test_matrix.cpp)
+package_add_test(test_geometry core/math/test_geometry.cpp)
 package_add_test(test_string_utils core/test_string_utils.cpp)
 package_add_test(test_variant_serializer core/io/test_variant_serializer.cpp)
 package_add_test(test_resource_format_scene core/io/test_resource_format_scene.cpp)
