--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,10 +93,11 @@ file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "include/*hpp")
 # https://github.com/bincrafters/community/issues/466#issuecomment-426265654
 add_library(gobot SHARED ${SOURCE_DRIVERS} ${SOURCE_MAIN} ${SOURCE_CORE} ${SOURCE_SCENE} ${SOURCE_EDITOR} ${HEADER_FILES})
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    target_compile_options(gobot PUBLIC "/Zc:preprocessor")
+    set(GOBOT_COMPILE_OPTIONS "/Zc:preprocessor,__cplusplus" "/bigobj")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    target_compile_options(gobot PUBLIC "-fno-gnu-unique")
+    set(GOBOT_COMPILE_OPTIONS "-fno-gnu-unique")
 endif ()
+target_compile_options(gobot PUBLIC "${GOBOT_COMPILE_OPTIONS}")
 
 # https://forum.qt.io/topic/97296/export-qobject-based-class-from-dll/2
 GENERATE_EXPORT_HEADER(gobot)
