--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,9 +17,10 @@ message(STATUS "gtest configured correctly")
 
 macro(package_add_test TESTNAME FILES)
     add_executable(${TESTNAME} ${FILES})
+    target_compile_options(${TESTNAME} PUBLIC "${GOBOT_COMPILE_OPTIONS}")
     target_link_libraries(${TESTNAME} gtest gmock gtest_main)
     if (MSVC)
-        target_link_libraries(${TESTNAME} gobot)
+        target_link_libraries(${TESTNAME} -Wl,--whole-archive gobot)
     else ()
         target_link_libraries(${TESTNAME} -Wl,--no-as-needed gobot)
     endif ()
@@ -37,6 +38,8 @@ package_add_test(test_ref_counted core/test_ref_counted.cpp )
 package_add_test(test_registration core/test_registration.cpp )
 package_add_test(test_project_setting core/test_project_setting.cpp )
 package_add_test(test_resource core/io/test_resource.cpp)
+package_add_test(test_matrix core/math/test_matrix.cpp)
+package_add_test(test_geometry core/math/test_geometry.cpp)
 package_add_test(test_string_utils core/test_string_utils.cpp)
 package_add_test(test_variant_serializer core/io/test_variant_serializer.cpp)
 package_add_test(test_resource_format_scene core/io/test_resource_format_scene.cpp)
