--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ package_add_test(test_box_mesh scene/test_primitive_mesh.cpp)
 package_add_test(test_node scene/test_node.cpp)
 package_add_test(test_node_complex scene/test_node_complex.cpp)
 
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 add_executable(test_filament_basic  filament/test_filament_basic.cpp)
-target_link_libraries(test_filament_basic PUBLIC Filament gobot)
+target_link_libraries(test_filament_basic PUBLIC Filament)
 
