--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,3 +50,4 @@ package_add_test(test_node_path scene/test_node_path.cpp)
 package_add_test(test_box_mesh scene/test_primitive_mesh.cpp)
 package_add_test(test_node scene/test_node.cpp)
 package_add_test(test_node_complex scene/test_node_complex.cpp)
+package_add_test(test_node_3d scene/test_node_3d.cpp)
