--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -17,12 +17,13 @@ add_library(imgui
         imgui/backends/imgui_impl_sdl2.cpp
         )
 
-target_include_directories(imgui PUBLIC imgui imgui/backends)
+target_include_directories(imgui PUBLIC imgui imgui/backends imgui_extension )
 
 find_package(OpenGL REQUIRED)
 add_executable(imgui_sdl2_opengl3_example imgui/examples/example_sdl2_opengl3/main.cpp)
 target_link_libraries(imgui_sdl2_opengl3_example imgui ${CONAN_LIBS} OpenGL::GL)
 
+add_executable(binary_to_compressed_c imgui/misc/fonts/binary_to_compressed_c.cpp)
 
 set(BGFX_WITH_SDL On)
 add_subdirectory(bgfx)
