remove sdl and sdl_image from conan

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(rttr)
+add_subdirectory(sdl2)
 
 add_library(imgui
         imgui/imgui.cpp
@@ -18,10 +19,11 @@ add_library(imgui
         )
 
 target_include_directories(imgui PUBLIC imgui imgui/backends)
+target_link_libraries(imgui PUBLIC SDL2::SDL2)
 
 find_package(OpenGL REQUIRED)
 add_executable(imgui_sdl2_opengl3_example imgui/examples/example_sdl2_opengl3/main.cpp)
-target_link_libraries(imgui_sdl2_opengl3_example imgui ${CONAN_LIBS} OpenGL::GL)
+target_link_libraries(imgui_sdl2_opengl3_example PUBLIC imgui ${CONAN_LIBS} OpenGL::GL)
 
 
 set(BGFX_WITH_SDL On)
