--- a/3rdparty/sdl2/CMakeLists.txt
+++ b/3rdparty/sdl2/CMakeLists.txt
@@ -20,7 +20,7 @@ if (SDL2_ADDED)
 
     # Create a target that copies headers at build time, when they change
     add_custom_target(sdl_copy_headers_in_build_dir
-            COMMAND ${CMAKE_COMMAND} -E copy_directory "${SDL_SOURCE_DIR}/include" "${CMAKE_BINARY_DIR}/SDLHeaders/SDL2"
+            COMMAND ${CMAKE_COMMAND} -E copy_directory "${SDL2_SOURCE_DIR}/include" "${CMAKE_BINARY_DIR}/SDLHeaders/SDL2"
             DEPENDS ${SDL_HEADERS})
 
     # Make SDL depend from it
